<!--

    Scafa - A universal non-caching proxy for the road warrior
    Copyright (C) 2015  Antonio Petrelli

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses />.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.apetrelli.scafa</groupId>
  <artifactId>scafa</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Scafa - Parent project</name>
  <description>Scafa: a universal non-caching proxy for the road warrior</description>
  <url>https://github.com/apetrelli/scafa</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <parent>
    <groupId>com.github.apetrelli</groupId>
    <artifactId>apetrelli-master</artifactId>
    <version>1-alpha3</version>
  </parent>
  <licenses>
    <license>
      <name>GNU General Public Licence Version 3</name>
      <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
    </license>
  </licenses>
  <developers>
  	<developer>
  		<name>Antonio Petrelli</name>
  		<email>antonio dot petrelli at gmail dot com</email>
  	</developer>
  </developers>
  <scm>
    <url>scm:git:https://github.com/apetrelli/scafa</url>
    <connection>scm:git:git://github.com/apetrelli/scafa.git</connection>
    <developerConnection>scm:git:https://github.com/apetrelli/scafa.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
  <modules>
    <module>scafa-server</module>
    <module>scafa-assembly</module>
    <module>scafa-systray</module>
    <module>scafa-headless</module>
    <module>scafa-systray-linux</module>
    <module>scafa-systray-windows</module>
    <module>scafa-proto</module>
    <module>scafa-http</module>
    <module>scafa-http-client</module>
    <module>scafa-http-server</module>
    <module>scafa-http-gateway</module>
    <module>scafa-http-proxy</module>
    <module>scafa-tls</module>
    <module>scafa-web-server</module>
  </modules>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>16</source>
          <target>16</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.2</version>
        <configuration>
          <releaseProfiles>release</releaseProfiles>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.11</version>
        <configuration>
          <header>src/etc/config/header.txt</header>
          <excludes>
            <exclude>LICENSE.txt</exclude>
            <exclude>src/test/resources/**</exclude>
            <exclude>src/main/resources/**</exclude>
            <exclude>**/JXTrayIcon.*</exclude>
          </excludes>
          <properties>
            <owner>Antonio Petrelli</owner>
            <years>2015-2019</years>
          </properties>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
